--- a/src/app/fantasy-teams/fantasy-teams.component.html
+++ b/src/app/fantasy-teams/fantasy-teams.component.html
@@ -1,20 +1,29 @@
+<div>
+    <mat-form-field>
+        <mat-label>Year</mat-label>
+        <mat-select [(ngModel)]="yearSelected">
+            <mat-option value="2025">2025 - 2026</mat-option>
+            <mat-option value="2024">2024 - 2025</mat-option>
+        </mat-select>
+    </mat-form-field>
+</div>
 <div class="cards">
     <div class="card">
         <mat-card class="jonah" [ngStyle]="{'background-color': cardColors['jonah'] || ''}">
             <mat-card-header>
                 <mat-card-title>
-                    Jonah - {{ jonahPoints }} points 
+                    Jonah - {{ jonahPoints }} points
                 </mat-card-title>
-                
+
             </mat-card-header>
             <mat-card-content>
                 @for (j of jonah; track j.teamName) {
-                <mat-list-item> <img src="{{j.logo}}" class="icons" /> {{j.placeName}} {{j.teamName}} - {{j.points}}</mat-list-item>
+                <mat-list-item> <img src="{{j.logo}}" class="icons" /> {{j.placeName}} {{j.teamName}} -
+                    {{j.points}}</mat-list-item>
+                <mat-list-item class="record">{{j.record}}</mat-list-item>
                 }
             </mat-card-content>
-            
         </mat-card>
-        <button mat-button (click)="openColorPicker('jonah')">Change Color</button>
     </div>
     <div class="card">
         <mat-card class="isaiah">
@@ -22,15 +31,33 @@
                 <mat-card-title>
                     Isaiah - {{ isaiahPoints }} points
                 </mat-card-title>
-                
+
             </mat-card-header>
             <mat-card-content>
                 @for (i of isaiah; track i.teamName) {
-                <mat-list-item><img src="{{i.logo}}" class="icons" /> {{i.placeName}} {{i.teamName}} - {{i.points}}</mat-list-item>
+                <mat-list-item><img src="{{i.logo}}" class="icons" /> {{i.placeName}} {{i.teamName}} -
+                    {{i.points}}</mat-list-item>
+                <mat-list-item class="record">{{i.record}}</mat-list-item>
                 }
             </mat-card-content>
         </mat-card>
-        <button mat-button (click)="openColorPicker('isaiah')">Change Color</button>
+    </div>
+        <div class="card">
+        <mat-card class="mom">
+            <mat-card-header>
+                <mat-card-title>
+                    Mom - {{ momPoints }} points
+                </mat-card-title>
+
+            </mat-card-header>
+            <mat-card-content>
+                @for (m of mom; track m.teamName) {
+                <mat-list-item><img src="{{m.logo}}" class="icons" /> {{m.placeName}} {{m.teamName}} -
+                    {{m.points}}</mat-list-item>
+                <mat-list-item class="record">{{m.record}}</mat-list-item>
+                }
+            </mat-card-content>
+        </mat-card>
     </div>
     <div class="card">
         <mat-card class="dad">
@@ -38,38 +65,21 @@
                 <mat-card-title>
                     Dad - {{ dadPoints }} points
                 </mat-card-title>
-                
+
             </mat-card-header>
             <mat-card-content>
                 @for (d of dad; track d.teamName) {
-                <mat-list-item><img src="{{d.logo}}" class="icons" /> {{d.placeName}} {{d.teamName}} - {{d.points}}</mat-list-item>
+                <mat-list-item><img src="{{d.logo}}" class="icons" /> {{d.placeName}} {{d.teamName}} -
+                    {{d.points}}</mat-list-item>
+                <mat-list-item class="record">{{d.record}}</mat-list-item>
                 }
             </mat-card-content>
         </mat-card>
-        <button mat-button (click)="openColorPicker('dad')">Change Color</button>
     </div>
-    <div class="card">
-        <mat-card class="mom">
-            <mat-card-header>
-                <mat-card-title>
-                    Mom - {{ momPoints }} points 
-                </mat-card-title>
-                
-            </mat-card-header>
-            <mat-card-content>
-                @for (m of mom; track m.teamName) {
-                <mat-list-item><img src="{{m.logo}}" class="icons" /> {{m.placeName}} {{m.teamName}} - {{m.points}}</mat-list-item>
-                }
-            </mat-card-content>
-        </mat-card>
-        <button mat-button (click)="openColorPicker('mom')">Change Color</button>
-    </div>
-    
-  </div>
+</div>
 
-  @if (sortByPlaceBool) {
-    <button mat-button (click)="sortByPlace()">Sort by points</button>
-  } @else {
-    <button mat-button (click)="sortByPlace()">Sort by team</button>
-  }
-  
+@if (sortByPlaceBool) {
+<button mat-button (click)="sortByPlace()">Sort by points</button>
+} @else {
+<button mat-button (click)="sortByPlace()">Sort by team</button>
+}
