--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -7,11 +7,32 @@
             </mat-card-header>
 
             @for (team of getTeamsByDivision(division); track $index) {
-                <mat-list-item >
+            <mat-list-item>
+                <img class="logo" [src]="team.teamLogo" />
+                {{team.placeName}} {{team.teamName}}
+            </mat-list-item>
+            }
+        </mat-card>
+    </div>
+    }
+</div>
+
+<div class="cards">
+    @for (conference of ["Eastern", "Western"]; track $index) {
+    <div class="card">
+        <mat-card appearance="outlined">
+            <mat-card-header>
+                <mat-card-title>{{conference}} Conference Standings</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                @for(team of getTeamsByConference(conference); track $index)
+                {
+                <mat-list-item>
                     <img class="logo" [src]="team.teamLogo" />
                     {{team.placeName}} {{team.teamName}}
                 </mat-list-item>
-            }
+                }
+            </mat-card-content>
         </mat-card>
     </div>
     }
